--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="HandheldFriendly" content="true">
     <base >
-    <title>Fly の 宅基地</title>
+    <title>肆弌七の迷之网站</title>
     <link href="cdn.bootcss.com/minireset.css/0.0.2/minireset.min.css" rel="stylesheet">
     <link href="moe-cdn.fly3949.com/assets/css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -59,10 +59,10 @@
                 <section id="home" class="active">
                     <h1>Fly3949</h1>
                     <p>
-                        我，Fly3949，苣蒻。
-                        <br> 对，苣蒻，菜，菜爆了。
-                        <br> 身处祖国东南一隅，就读于某不知名高中。
-                        <br> 喜欢看 LWL穿女装。
+                        还没做好。
+                        <br> 还没做好。
+                        <br> 还没做好。
+                        <br> 还没做好。
                     </p>
                 </section>
                 <section id="archives">
@@ -74,34 +74,14 @@
                 <section id="contact">
                     <h1>捕捉方式</h1>
                     <div class="items">
-                        <a href="https://www.fly3949.com/" target="_blank">
-                            <i class="fa fa-home"></i>
-                            <span>Blog</span>
-                        </a>
-                        <a href="https://weibo.com/fly3949/" target="_blank">
-                            <i class="fa fa-weibo"></i>
-                            <span>Weibo</span>
-                        </a>
-                        <a href="https://plus.google.com/u/0/101753687289611833602" target="_blank">
-                            <i class="fa fa-google-plus"></i>
-                            <span>Google+</span>
-                        </a>
-                        <a href="https://twitter.com/ifly3949" target="_blank">
-                            <i class="fa fa-twitter"></i>
-                            <span>Twitter</span>
-                        </a>
-                        <a href="https://github.com/fly3949" target="_blank">
-                            <i class="fa fa-github"></i>
-                            <span>GitHub</span>
-                        </a>
-                        <a href="mailto:i@iifly.cn" target="_blank">
+                        <a href="https://space.bilibili.com/288140847/dynamic" target="_blank">
                             <i class="fa fa-envelope"></i>
-                            <span>E-Mail</span>
+                            <span>Bilibili</span>
                         </a>
                     </div>
                 </section>
                 <section id="donate">
-                    <h1>拯救吃土的 Fly</h1>
+                    <h1> </h1>
                     <div class="donate-img-box">
                         <img src="moe-cdn.fly3949.com/assets/img/WeChat.png">
                         <img src="moe-cdn.fly3949.com/assets/img/AliPay.png">
