--- a/index.html
+++ b/index.html
@@ -110,5 +110,7 @@
     <!-- Some scripts -->
     <script src="cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="moe-cdn.fly3949.com/assets/js/main.js"></script>
+    <!--Play Music-->
+     <audio src="moe-cdn.fly3949.com/assets/music/ななひら - 物凄いデコトラでパチュリーが物凄いうた.mp3" autoplay></audio>
 </body>
 </html>
