--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
     <script src="cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="moe-cdn.fly3949.com/assets/js/main.js"></script>
     <!--Play Music-->
+    <!---<a href="//www.runoob.com/html/html-tutorial.html">
+    <img border="0" src="moe-cdn.fly3949.com/assets/img/audiopaly.jpg" alt="播放音乐" width="32" height="32"></a>
+    -->
     <audio  src="moe-cdn.fly3949.com/assets/music/ななひら - 物凄いデコトラでパチュリーが物凄いうた.mp3" preload="auto"></audio>
-    <audio src="moe-cdn.fly3949.com/assets/music/ななひら - 物凄いデコトラでパチュリーが物凄いうた.mp3" autoplay></audio>
+    <!--<audio src="moe-cdn.fly3949.com/assets/music/ななひら - 物凄いデコトラでパチュリーが物凄いうた.mp3" autoplay></audio>-->
+    <audio controls>
+    <source src="moe-cdn.fly3949.com/assets/music/ななひら - 物凄いデコトラでパチュリーが物凄いうた.mp3"  type="audio/mpeg">
+    您的浏览器不支持 audio 元素。
+    </audio>
 </body>
 </html>
