--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
                     <h1>肆弌七417</h1>
                     <p>
                         此为个人测试网站，用于个人的记录和分享
-                        <br> 此网站的模板来自https://fly.moe/。
                         <br> 这里应该加点字比较好。
                         <br> 我觉得这里应该有点字。
                     </p>
-                    <!--Play Music-->
-                        <embed src="//music.163.com/style/swf/widget.swf?sid=2075197&type=1&auto=1&width=310&height=430" width="330" height="450"  allowNetworking="all"></embed>
+                    <!--Play Music
+                        <embed src="//music.163.com/style/swf/widget.swf?sid=2075197&type=1&auto=1&width=310&height=430" width="330" height="450"  allowNetworking="all"></embed>-->
                 </section>
                 <!---<section id="archives">
                     <h1>近期文章</h1>
