Update Aya's journal trip in Gazebo.html

--- a/Aya's journal trip in Gazebo.html
+++ b/Aya's journal trip in Gazebo.html
@@ -44,5 +44,5 @@ console.log('test:',randomWord(true,1,1));
     var imgobj=document.getElementById('imgss');
     console.log('imgobj:',imgobj);
     //imgobj.innerHTML='<img width="50%"" height="50%" src='+str2+'/>';
-    imgobj.innerHTML='<style>body {background-image: url('+str2+');    background-repeat:inherit|no-repeat|repeat|repeat-x|repeat-ybackground-repeat: no-repeat;background-position: center;background-attachment: fixed;} </style>/>';
+    imgobj.innerHTML='<style>body {background-image: url('+str2+');    background-repeat:inherit|no-repeat|repeat|repeat-x|repeat-ybackground-repeat: no-repeat;background-position: center;background-attachment: fixed;} </style>';
 </script>
