--- a/xhst.html
+++ b/xhst.html
@@ -1,9 +1,9 @@
 <HTML>
 <HEAD>
-<META HTTP-EQUIV="Content-Type" content"text/html; charset=utf-8">
-<TITLE>ºúÌÒÀÏÆÅ</TITLE>
+<META charset=utf-8>
+<TITLE>å–œæ¬¢èƒ¡æ¡ƒ</TITLE>
 </HEAD>
 <BODY>
-<h1>ºúÌÒÀÏÆÅ</h1>
+<h1>å–œæ¬¢èƒ¡æ¡ƒ</h1>
 </BODY>
 </HTML>
