--- a/xhst.html
+++ b/xhst.html
@@ -2,8 +2,16 @@
 <HEAD>
 <META charset=utf-8>
 <TITLE>喜欢胡桃</TITLE>
+<style>body {background-image: url(common/ys_ht.png);    background-repeat:inherit|no-repeat|repeat|repeat-x|repeat-ybackground-repeat: no-repeat;background-position: center;background-size: 100%;} 
+</style>
 </HEAD>
 <BODY>
 <h1>喜欢胡桃</h1>
+<script>
+    var imgobj=document.getElementById('imgss');
+    console.log('imgobj:',imgobj);
+    //imgobj.innerHTML='<img width="50%"" height="50%" src='+str2+'/>';
+    imgobj.innerHTML='<style>body {background-image: url(common/ys_ht.jpg);    background-repeat:inherit|no-repeat|repeat|repeat-x|repeat-ybackground-repeat: no-repeat;background-position: center;background-attachment: fixed;} </style>';
+</script>
 </BODY>
 </HTML>
